using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isDashing = "isDashing";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCd = "attackCd";
    internal static string isOpened = "isOpened";
}
